--- a/Урок 5/lesson5/package.json
+++ b/Урок 5/lesson5/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -18,6 +19,7 @@
     "browser-sync-webpack-plugin": "^1.2.0",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
+    "env": "0.0.2",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
